--- a/pom.xml
+++ b/pom.xml
@@ -140,21 +140,67 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>${javafx.maven.plugin.version}</version>
+                <configuration>
+                    <mainClass>com.eibo.view.JavaFXApp</mainClass>
+                    <additionalClasspathElements>
+                        <additionalClasspathElement>${project.basedir}/lib/jl1.0.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${project.basedir}/lib/minim.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${project.basedir}/lib/jsminim.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${project.basedir}/lib/mp3agic.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${project.basedir}/lib/mp3spi1.9.5.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${project.basedir}/lib/mp3ui.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${project.basedir}/lib/tritonus_aos.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${project.basedir}/lib/tritonus_share.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${project.basedir}/lib/eia_StaticScanner.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${project.basedir}/lib/eia_simpleminim_v2.jar</additionalClasspathElement>
+                    </additionalClasspathElements>
+                    <args>
+                        <arg>--add-opens</arg>
+                        <arg>java.base/java.lang=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.desktop/javax.sound.sampled=ALL-UNNAMED</arg>
+                    </args>
+                </configuration>
                 <executions>
                     <execution>
                         <id>default-cli</id>
-                        <configuration>
-                            <mainClass>com.eibo.view.JavaFXApp</mainClass>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
 
-            <!-- Exec Plugin for running console app with lib dependencies -->
+            <!-- Custom JavaFX task to avoid module issues -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>run-javafx</id>
+                        <configuration>
+                            <mainClass>com.eibo.view.JavaFXApp</mainClass>
+                            <includeProjectDependencies>true</includeProjectDependencies>
+                            <includePluginDependencies>false</includePluginDependencies>
+                            <additionalClasspathElements>
+                                <additionalClasspathElement>${project.basedir}/lib/jl1.0.1.jar</additionalClasspathElement>
+                                <additionalClasspathElement>${project.basedir}/lib/minim.jar</additionalClasspathElement>
+                                <additionalClasspathElement>${project.basedir}/lib/jsminim.jar</additionalClasspathElement>
+                                <additionalClasspathElement>${project.basedir}/lib/mp3agic.jar</additionalClasspathElement>
+                                <additionalClasspathElement>${project.basedir}/lib/mp3spi1.9.5.jar</additionalClasspathElement>
+                                <additionalClasspathElement>${project.basedir}/lib/mp3ui.jar</additionalClasspathElement>
+                                <additionalClasspathElement>${project.basedir}/lib/tritonus_aos.jar</additionalClasspathElement>
+                                <additionalClasspathElement>${project.basedir}/lib/tritonus_share.jar</additionalClasspathElement>
+                                <additionalClasspathElement>${project.basedir}/lib/eia_StaticScanner.jar</additionalClasspathElement>
+                                <additionalClasspathElement>${project.basedir}/lib/eia_simpleminim_v2.jar</additionalClasspathElement>
+                            </additionalClasspathElements>
+                            <args>
+                                <arg>--add-opens</arg>
+                                <arg>java.base/java.lang=ALL-UNNAMED</arg>
+                                <arg>--add-opens</arg>
+                                <arg>java.desktop/javax.sound.sampled=ALL-UNNAMED</arg>
+                            </args>
+                        </configuration>
+                    </execution>
+                </executions>
                 <configuration>
                     <mainClass>com.eibo.Main</mainClass>
                     <includeProjectDependencies>true</includeProjectDependencies>
